Paragraph scrollbar fix

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
   margin-top: 20px;
   margin-bottom: 5px;
   width: 310px;
-  height: 150px;
+  height: 145px;
   overflow-y: scroll;
   word-wrap: break-word;
   font-size: 16px;
